Fix classname and fix scrollbar push content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 @import 'tw-animate-css';
 @tailwind utilities;
 @utility no-scrollbar {
-	@apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+	@apply [scrollbar:none] [&::-webkit-scrollbar]:hidden;
 }
 
 /* Dark variant */
@@ -88,6 +88,17 @@
 	--sidebar-accent-foreground: oklch(0.205 0 0);
 	--sidebar-border: oklch(0.922 0 0);
 	--sidebar-ring: oklch(0.708 0 0);
+}
+
+:root.scroll-smooth {
+	scrollbar-gutter: stable both-edges;
+  overflow: auto;
+  scrollbar-width: none !important;
+
+  /* Safari and Chrome / Chromium engines */
+  &::-webkit-scrollbar {
+    display: none !important;
+  }
 }
 
 /* Dark Theme Overrides (ONLY OVERRIDES) */
